# deepin-installer

./: .gitignore  CMakeLists.txt  README  README.md  TODO  com.deepin.deepin-installer.appearance.gschema.xml  deepin-installer.conf  main.cpp  project.config  rebuild.sh
.tx/: config
app/: CMakeLists.txt  timezone.c  timezone.h
app/installer/: CMakeLists.txt  README.MD  account.c  account.h  base.c  base.h  com.deepin.pkexec.installer.policy  deepin-installer.desktop  esp.c  esp.h  extract.c  extract.h  fs_util.c  fs_util.h  grub.c  grub.h  help.c  hooks.c  hooks.h  info.c  info.h  installer.c  keyboard.c  keyboard.h  locale.c  locale.h  misc.c  misc.h  packageslist.ini  part_util.c  part_util.h  ped_utils.c  ped_utils.h  scheduler.c  scheduler.h  setup.c  setup.h  system_info.c  timezone.c  timezone.h  (+3 more)
app/installer/go/: hooks.c  info.c  info.h  main.go  scheduler.c  scheduler.h
app/installer/jsc/: dbus.cfg  help.cfg  installer.cfg
app/language-selector/: CMakeLists.txt  com.deepin.dde.lightdm.service  deepin-lightdm-language-selector.desktop  greeter.c  greeter_util.c  greeter_util.h  mouse.c  mouse.h  mutils.c  mutils.h  session.c  session.h  theme.c  theme.h  user.c  user.h
app/language-selector/jsc/: greeter.cfg
app/language-selector/language-selector-helper/: CMakeLists.txt  com.deepin.helper.LanguageSelector.conf  com.deepin.helper.LanguageSelector.service  main.go  shell_code.go  supported_locales.go
bulid/: installer
bulid/lib/: _gen_dcore.c
bulid/po/: zh_CN.gmo  zh_TW.gmo
casper-bottom/: 25deepin-installer  26auto-deepin-installer  27deepin-livecd
debian/: changelog  control  copyright  deepin-livecd-installer.desktop  install  rules
hooks/after_chroot/: 00-print_conf.job  01-copy-aptcache.job  01-generate-fstab.job  02-generate-fstab.job  03-remove-policy-rc.job  10-loongson-boot.job  58-generate-theme-thumbnails.job  80-remove-cdrom-repository  90-unmount.job  99-sync.job  genfstab
hooks/before_chroot/: 00-detect-liveboot-method.job  00-inhibit-screensaver.job  00-make-partitions.job  00-mount_target.job  01-extract_base_filesystem.job  02-get_screen_resolution.job  02-inhibit-screensaver.job  11-mount-target.job  11-setup_mount_points.job  21-extract-base-filesystem.job  31-get-screen-resolution.job  41-setup-mount-points.job  42-create-policy-rc.job  99-print-info.job  99-print_current_info.job  auto_part  extra_base_filesystem  extract_base_filesystem  test-00-mount_target.job
hooks/in_chroot/: 00-print-info.job  01-configure_users.job  01-setup-locale-timezone.job  01configure-users.sh  02-setup-cdrom-repository.job  02-setup-cdrom-resository.job  02-setup_bootloader.job  03-configure_users.job  03-setup_bootloader.job  04-setup-keyboard.job  05-generate-machine-id.job  06-custom-with-os-type.job  06-install-locale-pkgs.job  2  50-setup-bootloader.job  50-setup-locale-timezone.job  50-setup_bootloader.job  51-install-deepin-license-activator.job  56-enable-network-manager.job  56-remove-disable-lockscreen-schema.job  57-configure-lightdm.job  58-fix-network-drivers.job  58-generate-theme-thumbnails.job  59-fix-command-capabilities.job  59-ssd-plymouth-alternatives.job  59-update-gtk-immodules.job  60-install-drivers  60-setuid-bit-scripts.job  61-enable-utc-hwclock.job  70-enable-activation-verification.job  89-custom-atm.job  90-remove-unused-packages.job  90remove-unused-packages.job  91-checkif-remove-btrfs-tools.job  98-disable-root.job  98-refresh-desktop-cache.job  99-setup-apt-sources.job
install.d/: 00_header  10_linux
lib/: CMakeLists.txt  X_misc.c  X_misc.h  background.c  background.h  bg_pixbuf.c  category.c  category.h  config.h  desktop_action.c  desktop_action.h  display_info.c  display_info.h  dwebview.h  i18n.c  i18n.h  pixbuf.c  pixbuf.h  singleton.c  singleton.h  utils.c  utils.h  webview.c  xdg_misc.c  xdg_misc.h  xid2aid.c  xid2aid.h
lib/dbus/: CMakeLists.txt  dbus.c  dbus_introspect.c  dbus_introspect.h  dbus_js_convert.c  dbus_js_convert.h  dbus_object_info.c  dbus_object_info.h
lib/dentry/: CMakeLists.txt  dentry.cfg  entry.c  entry.h  enums.h  fileops.c  fileops.h  fileops_clipboard.c  fileops_clipboard.h  fileops_delete.c  fileops_delete.h  fileops_error_dialog.c  fileops_error_dialog.h  fileops_error_reporting.c  fileops_error_reporting.h  fileops_trash.c  fileops_trash.h  gnome-desktop-thumbnail.c  mime_actions.c  mime_actions.h  thumbnails.c  thumbnails.h
lib/jsc_extension/: dcore.c  dcore.cfg  dcore.h  jsc_gen.py  jsextension.c  jsextension.h  json.c  object.c  signal.c
live-boot/: 9990-misc-helpers2.sh  9990-mount-ntfs-findiso  9990-mount-ntfs-findiso.sh
live-config/: 1070deepin-installer  1071auto-deepin-installer  1072deepin-livecd
old/app/language-selector/language-selector-helper/: CMakeLists.txt
old/casper-bottom/: 25deepin-installer
old/lib/dbus/: CMakeLists.txt  dbus.c  dbus_introspect.c  dbus_introspect.h  dbus_object_info.c
po/: CMakeLists.txt  af.po  am.po  am_ET.po  ar.po  ast.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  de_DE.po  deepin-installer.pot  el.po  el_GR.po  en_AU.po  eo.po  es.po  es_419.po  es_CL.po  es_ES.po  es_MX.po  fa.po  fi.po  fil.po  fr.po  gl.po  gl_ES.po  he.po  hi.po  hi_IN.po  hr.po  hu.po  hy.po  id.po  id_ID.po  installer.pot  it.po  (+32 more)
src/: .#basic_utils.py  .#cairo_test.py  .#command.py  .#confirm_install_ui.py  .#create_account.py  .#install_progress_ui.py  .#isinstall_ui.py  .#local_ui.py  .#locale_set.py  .#region_util.py  .#setupinfo_error_ui.py  .#utils.py  account.py  account_util.py  basic.py  basic_utils.py  basic_utils.py.old  cairo_test.py  command.py  confirm_install_ui.py  constant.py  copy_util.py  copy_util.py.old  create_account.py  create_account.py.old  deepin_demonstrate_ui.py  do_copy.py  do_partition.py  finish_restart_ui.py  install_progress_ui.py  install_ui.py  locale_set.py  locale_ui.py  log_util.py  main.py  mount_util.c  mount_util.py  part.py  part_edit.py  part_edit_ui.py  (+14 more)
templates/: lfs-atm.conf
test/: CMakeLists.txt  jsc_test.cfg  test.c  test.h
tools/: CMakeLists.txt  detect_esp.c  unsquashfs_progress.c
(+189 files in other folders)
